log/build_2021-12-13_00-48-26/main/stderr.log
  File "/home/ubuntu/ws/Libero/install/main/lib/python3.8/site-packages/python_programs/main.py", line 243
    self.slave.lidar_degree = (float)self.distance
                                     ^
SyntaxError: invalid syntax

